# catdog

./: .travis.yml  BACKUP_SYSTEM.md  CHANGELOG.md  Cargo.toml  PRODUCTION_READY.md  README.md
.github/workflows/: ci.yml
src/: alerts.rs  backup.rs  config.rs  diff.rs  error.rs  main.rs  monitor.rs  package.rs  service.rs  sysinfo.rs
src/corpus/: analyzer.rs  indexer.rs  mod.rs  vector.rs
