[package]
name = "catdog"
version = "0.1.0"
edition = "2021"
authors = ["Michael Mendy"]
description = "A filesystem management tool for fstab, device discovery, and monitoring"
repository = "https://github.com/mmendy/catdog"
license = "MIT OR Apache-2.0"

[dependencies]
colored = "2.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
